fixed icon and text  visibility on all screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,9 @@ body {
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  flex-wrap: nowrap;
+  flex-flow: row;
+  justify-content: space-between;
   letter-spacing: 0.2rem;
   padding: 0px;
   height: 3.5rem;
@@ -38,7 +40,7 @@ body {
   font-weight: 900;
   font-size: 1.2rem;
   align-self: srart;
-  margin: auto 0;
+  margin: auto 40px;
   color: rgb(255, 255, 255);
 }
 
@@ -66,19 +68,19 @@ i.fas {
 }
 /*menu icons*/
 
-.navbar-nav {
+/*.navlinks {
   display: flex; 
-  width: fit-content;
+  width: 100%;
   justify-content: space-between;
-}
+}*/
 
 
 
-#navbarNav {
+#navbarNav{
   color: white;
   background: transparent;
   font-size: 1.6rem;
-  margin: 10px;
+  
   display: none;
   flex-flow: row;
   width: 100%;
@@ -86,13 +88,14 @@ i.fas {
 
 #navbarNav.show {
     display: flex;
+     justify-content: space-between;
 }
 
-.navbar-nav .nav-item:hover,
+/*.navbar-nav .nav-item:hover,
 .logo-name:hover {
   color: rgb(208, 98, 98);
   text-transform: uppercase;
-}
+}*/
 
 .info-icon {
   width: 35px;
@@ -103,7 +106,7 @@ i.fas {
     5px 5px 10px rgba(48, 47, 47, 0.5);
   border: 2px solid rgba(48, 47, 47, 0.5);
   outline: none;
-margin: auto;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -131,7 +134,7 @@ margin: auto;
     5px 5px 10px rgba(48, 47, 47, 0.5);
   border: 2px solid rgba(48, 47, 47, 0.5);
   outline: none;
-margin: auto;
+margin-right: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -147,6 +150,12 @@ margin: auto;
     5px 5px 10px rgba(48, 47, 47, 0.5),
     inset  -3px -3px 10px rgba(255, 255, 255, 0.5),
     inset 2px 3px 7px rgba(153, 152, 152, 0.025);
+}
+
+.navlinks .info-icon,
+.navlinks .contact-icon {
+    margin-left:10px; 
+    float: right;
 }
 /*Gear Buttons*/
 
@@ -483,6 +492,16 @@ margin: auto;
     display: flex;
     justify-content: space-around;
   }
+
+.navlinks {
+    display: flex;
+    position: absolute;
+    margin-right: 30px;
+    right: 50px;
+}
+.info-icon {
+    margin-right: 30px;
+}
 }
 
 @media (min-width: 810px) {
@@ -512,7 +531,36 @@ margin: auto;
   .dropdown {
     width: 100px;
   }
-  .navbar-toggler {
-    display: none;
+  .hamburger {
+      display: none;
   }
+  .navbar-nav a.nav-link {
+  display: flex;
+  flex-flow: row;
+  font-size: 1.2rem;
+  color: white;
+  width: 100%;
+  
+}
+
+.navbar-nav a.nav-link:hover {
+  color: rgb(208, 98, 98);
+  text-transform: uppercase;
+}
+
+#navbarNav {
+    display: flex;
+}
+
+.navlinks .nav-link{
+    margin-right: 30px;
+}
+
+div#info-icon,
+div#contact-icon {
+    display: none;
+}
+.logo-name{
+    margin:auto 70px;
+}
 }
